Closed Bug 1623681 Opened 6 years ago Closed 6 years ago

Fix comments that mention StaticPrefs.yaml instead of StaticPrefList.yaml

Categories

(Core :: Preferences: Backend, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla76
Tracking Status
firefox76 --- fixed

People

(Reporter: kats, Assigned: kats)

References

Details

Attachments

(1 file)

StaticPrefs.yaml isn't a thing.

Summary: Fix comments that mention StaticPrefs.yaml instead of StaticPrefsList.yaml → Fix comments that mention StaticPrefs.yaml instead of StaticPrefList.yaml
Pushed by kgupta@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d8c8ce778dee Fix comments referring to incorrect file. r=njn
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: