Bug 1623681 - Fix comments referring to incorrect file. r=njn

Differential Revision: https://phabricator.services.mozilla.com/D67512