gfx/layers/apz/src/AsyncPanZoomController.cpp
@@ -137,7 +137,7 @@ typedef PlatformSpecificStateBase
  * \page APZCPrefs APZ preferences
  *
  * The following prefs are used to control the behaviour of the APZC.
- * The default values are provided in StaticPrefs.yaml.
+ * The default values are provided in StaticPrefList.yaml.
  *
  * \li\b apz.allow_double_tap_zooming
  * Pref that allows or disallows double tap to zoom
